# standards-atlas

./: README.md  pyproject.toml  setup.sh
cfg/: 0001-Add-modifications-to-doorstop.patch  patch-doorstop
data/: Clauses.tlpx  EN50126  EN50128  EN50129  EN50657  EN50716  HeatMap-01.tlpx  HeatMap-02.tlpx  IEC11889  IEC61508  IEC61508-3-1  ISO26262  ISO5083  PAS8926  mapping01  mapping02  mapping03  mapping04  relations.csv
docs/: data-formats.md  getting-started.md  intellidoc.md  motivation.md  relationship-mapping.md
tools/: 0001-Add-modifications-to-doorstop.patch  intellidoc  linkItems  patch-doorstop.v2.2.1  patch-doorstop.v3.0  patch-doorstop.v3.0.1  referenceItems  relator  requirements.txt  standards-atlas  test_ramalama.py
tools/IntelliDoc/: Clause.py  ClauseIngestor.py  ClauseRetriever.py  ClauseStore.py  Embedding.py  HeadingFactory.py  KnowledgeDomain.py  LLM.py  RamalamaClient.py  Relationship.py  Summarizer.py  VectorStore.py
tools/embeddings evaluation/: clause_similarity.ipynb  clause_similarity_tool.ipynb  data_preparation.ipynb  requirements.txt
travelogue/: ISO-IEC-DocumentationManagement.md  Proven-In-Use-Argument.md  Requirements-Basic-Integrity-(SIL0)-according-to-EN-50716.md  Requirements-Basic-Integrity-(SIL0)-according-to-EN50657.md   Structural-Comparison-of-Standards.md
