[tool.poetry]
name = "standards-atlas"
version = "0.1.0"
description = ""
authors = ["Sebastian Hetze shetze@redhat.com", "Florian Wuehr <fwuehr@redhat.com>"]

package-mode = false

[tool.poetry.dependencies]
#  Define python version
python = ">=3.10, <3.14"

# Dependencies
doorstop = "3.0.2"
numpy = ">=1.24.3"
ramalama = "0.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
